# risky-mlir

./: CMakeLists.txt  README.md
include/risky/: Passes.h
lib/: CMakeLists.txt  RiskyFinalizeSPIRV.cpp  RiskySanitizeTritonLinalg.cpp  RiskySetupSPIRVABI.cpp
tools/: CMakeLists.txt  risky-opt.cpp
